# chicagodir

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Pipfile  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  supervisord.conf  webpack.config.js
.github/workflows/: lint.yaml
assets/css/: style.css
assets/js/: main.js  script.js
chicagodir/: LICENSE  app.py  commands.py  settings.py
chicagodir/directory/: forms.py  models.py  views.py
chicagodir/public/: forms.py  views.py
chicagodir/streets/: __init__.py  forms.py  geodata.py  grid_interpolate.py  models.py  plot.py  sorting.py  streetlist.py  tasks.py  views.py
chicagodir/streets/data/: grid_locations.csv
chicagodir/templates/: footer.html  layout.html  nav.html
chicagodir/templates/dir/: direct_index.html  direct_listing.html  job_listing.html  new_page.html  page_listing.html  street_list.html
chicagodir/templates/public/: about.html  help_out.html  home.html
chicagodir/user/: models.py
migrations/versions/: 054be0852f9f_.py  0d8c69fb3ae0_.py  3154e83d2e30_.py  3df429698f31_.py  4ae2f5a7cfc1_.py  521d4d6c0f59_.py  63c099968697_.py  84b5ddd15854_.py  85ff8aa6633e_.py  884fbf8b24ed_.py  a1fb1a3ff551_.py  d658858966d7_.py  e68b43218263_.py  f29b30fc0074_.py
shell_scripts/: auto_pipenv.sh  populate_db.py  reset_db.sh
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  settings.py  test_database.py  test_forms.py  test_functional.py  test_models.py
(+9 files in other folders)
