[tool.poetry]
name = "chicagodir"
version = "0.1.0"
description = "historical chicago city directories"
authors = ["ted whalen <tew@introvert.net>"]

[tool.poetry.dependencies]
python = "^3.9"

#flask
Flask = "^2.2.2"

# sqlalchemy
Flask-SQLAlchemy = "^3.0.2"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"

# flask add-ons
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"
Flask-Static-Digest = "^0.2.1"
Flask-Login = "^0.6.0"
Flask-Bcrypt = "^1.0.1"
Flask-Caching = "^2.0.1"
Flask-DebugToolbar = "^0.13.1"
environs = "^9.5.0"
Markdown = "^3.3.6"

# deployment
gunicorn = "^20.1.0"
supervisor = "^4.2.4"
gevent = "^22.10.2"

# redis
redis = "^4.2.0"
rq = "^1.10.1"

# GIS / visualization stuff
geopandas = "^0.12.1"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
Pillow = "^9.0.1"
numpy = "^1.22.3"
Rtree = "^1.0.0"

# AWS
boto3 = "^1.22.1"

# dependencies
click = "^8.1.2"
GeoAlchemy2 = "^0.11.1"


[tool.poetry.dev-dependencies]
# Testing
pytest = "==7.1.3"
WebTest = "==3.0.0"
factory-boy = "==3.2.*"
pdbpp = "==0.10.3"

# Lint and code style
black = "==22.3.0"
flake8 = "==4.0.1"
flake8-blind-except = "==0.2.1"
flake8-debugger = "==4.0.0"
flake8-docstrings = "==1.6.0"
flake8-isort = "==4.1.1"
isort = "==5.10.1"
pep8-naming = "==0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]
